[package]
name = "stm32-dsp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmsis_dsp_sys_pregenerated = "0.1.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.6.14"
cortex-m-rtic = "0.5.7"
cortex-m-semihosting = "0.3.7"
embedded-hal = "0.2.5"
libm = "0.2.1"
micromath = "2.0.0"
nb = "1.0.0"
no-std-compat = "0.4.1"
panic-halt = "0.2.0"
panic-semihosting = "0.5.6"
rand_core = "0.6.3"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
stm32_i2s_v12x = "0.2.0"
stm32f4xx-hal = { branch = "master", git = "https://github.com/stm32-rs/stm32f4xx-hal.git", features = ["rt", "stm32f407", "i2s"] }
